[package]
name = "cgm"
version = "0.0.1"
authors = ["odanek <ondrej.danek@gmail.com>"]
edition = "2018"
description = "Copmputer graphics math"
license = "MIT"
readme = "README.md"
repository = "https://github.com/odanek/cgm"

[dependencies]
bytemuck = "1.8.0"
crevice = "0.8.0"
crevice-derive = "0.8.0"
