[package]
name = "cgm"
version = "0.0.1"
authors = ["odanek <ondrej.danek@gmail.com>"]
edition = "2018"
description = "Copmputer graphics math"
license = "MIT"
readme = "README.md"
repository = "https://github.com/odanek/cgm"

[dependencies]
bytemuck = "1.13.1"
crevice = "0.13.0"
crevice-derive = "0.10.0"
